--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
           }
     },
     "include": [
+        "server/**/*.ts",
         "src/**/*.ts",
         "src/**/*.tsx",
         "typings.d.ts"
