add mp3 alarm and switch (on/off)

--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "@tanstack/react-query": "^5.28.14",
+    "@types/node": "^20.12.5",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.23",
     "expo-av": "^13.10.5",
+    "play-sound": "^1.1.6",
     "react": "^18.2.0",
     "react-clock": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "react-switch": "^7.0.0",
     "react-toastify": "^10.0.5",
     "sound-play": "^1.1.0",
     "sqlite3": "^5.1.7",
@@ -30,6 +33,7 @@
     "@babel/core": "^7.24.3",
     "@babel/preset-env": "^7.24.3",
     "@babel/preset-react": "^7.24.1",
+    "@types/play-sound": "^1.1.2",
     "@types/webpack": "^5.28.5",
     "@types/webpack-dev-server": "^4.7.2",
     "babel-loader": "^9.1.3",
