--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
     "electron": "^29.2.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "node-sass": "^9.0.0",
     "sass-loader": "^14.1.1",
