--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
             "*": [
                 "src/*"
             ]
-        }
+        },
+        "typeRoots" : ["node_modules/@types", "src/types"]
     },
     "include": [
         "server/**/*.ts",
